--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,23 +6,24 @@
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
   <application
-    android:allowBackup="true"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
-      android:name="com.we.BtSketchPad.SketchPadActivity"
+      android:name=".SketchPadActivity"
+      android:configChanges="orientation|screenSize|keyboardHidden"
       android:label="@string/app_name"
-      android:theme="@style/AppTheme.NoActionBar"
-      android:configChanges="orientation|screenSize|keyboardHidden">
+      android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
   </application>
 
 </manifest>
